Find Glyphs by Anchor

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-# Byte-compiled / optimized / DLL files
+TW Test Font in UI/
+
+# Byte-compiled /
+optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
